--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body,ul,li,p{
+  margin: 0px;
+  padding: 0px;
+  font-size: 1em;
+  font-family: "Open Sans", sans-serif;
+  /* color: #A1AEB7; */
+  background: #F5F5F5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+  --color-header: #007A7C;
+  --color-paragraph: #454545;
 }
+
+
+img {
+  max-width: 100%;
+}
+
+ul{
+  list-style: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+html {
+  font-family: 'Open Sans', sans-serif;
+ }
